--- a/index.html
+++ b/index.html
@@ -30,12 +30,15 @@ https://pablolarios163d-cpu.github.io/canva/">A3 - Canva </a></li>  </li>
 https://pablolarios163d-cpu.github.io/lllllllll/">A4 - Imagen animada </a></li>
   <li>  <li><a href="
     
-    https://pablolarios-droid.github.io/fnegvekj/">A5 - teclado interactivo </a></li>
+    https://pablolarios-droid.github.io/fnegvekj/">A5 - Teclado interactivo </a></li>
   <li>  <li><a href="
 
-               https://pablolarios-droid.github.io/mmmm/">A6 - movimiento mouse </a></li>
+               https://pablolarios-droid.github.io/mmmm/">A6 - Movimiento mouse </a></li>
+  <li>  <li><a href="
+               https://pablolarios-droid.github.io/ondas/">A7 - Onda sinoidal </a></li>
   <li>  <li><a href="
 
   </body>
 </html>
  
+
