--- a/index.html
+++ b/index.html
@@ -24,21 +24,25 @@
   <li><a href="
 https://pablolarios163d-cpu.github.io/AnimacionDinamica/">A2 - Página Básica</a></li>
   <li>  <li><a href="
+              <ul class="list">
 https://pablolarios163d-cpu.github.io/canva/">A3 - Canva </a></li>  </li>
 </ul>
 <li><a href="
+      <ul class="list">
 https://pablolarios163d-cpu.github.io/lllllllll/">A4 - Imagen animada </a></li>
   <li>  <li><a href="
-    
-    https://pablolarios-droid.github.io/fnegvekj/">A5 - Teclado interactivo </a></li>
+    <ul class="list">
+https://pablolarios-droid.github.io/fnegvekj/">A5 - Teclado interactivo </a></li>
   <li>  <li><a href="
-
-               https://pablolarios-droid.github.io/mmmm/">A6 - Movimiento mouse </a></li>
+<ul class="list">
+https://pablolarios-droid.github.io/mmmm/">A6 - Movimiento mouse </a></li>
   <li>  <li><a href="
-               https://pablolarios-droid.github.io/ondas/">A7 - Onda sinoidal </a></li>
+              <ul class="list">
+https://pablolarios-droid.github.io/ondas/">A7 - Onda sinoidal </a></li>
   <li>  <li><a href="
 
   </body>
 </html>
  
+
 
