--- a/index.html
+++ b/index.html
@@ -41,9 +41,12 @@ https://pablolarios163d-cpu.github.io/canva/">A3 - Canva </a></li>  </li>
   <li>  <li><a href="
                https://pablolarios-droid.github.io/ondas/">A7 - Onda sinoidal </a></li>
   <li>  <li><a href="
-
+  
+               https://pablolarios-droid.github.io/ondas2-reto/">A8 - Onda sinoidal reto </a></li>
+  <li>  <li><a href="
   </body>
 </html>
+
 
 
 
