--- a/index.html
+++ b/index.html
@@ -57,12 +57,13 @@
       <li><a href="https://pablolarios163d-cpu.github.io/lllllllll/">A4 - Imagen animada</a></li>
       <li><a href="https://pablolarios-droid.github.io/fnegvekj/">A5 - Teclado interactivo</a></li>
       <li><a href="https://pablolarios-droid.github.io/mmmm/">A6 - Movimiento mouse</a></li>
-      <li><a href="https://pablolarios-droid.github.io/ondas/">A7 - Onda sinusoidal</a></li>
-      <li><a href="https://pablolarios-droid.github.io/ondas2-reto/">A8 - Onda sinusoidal reto</a></li>
+      <li><a href="https://pablolarios-droid.github.io/ondas/">A7 - Onda sinoidal</a></li>
+      <li><a href="https://pablolarios-droid.github.io/ondas2-reto/">A8 - Onda sinoidal reto</a></li>
     </ul>
   </main>
 </body>
 </html>
+
 
 
 
