--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     }
     header img {
       width: 100%;
-      height: auto;
+      height: 200px; /* 🔹 altura reducida del banner */
+      object-fit: cover; /* mantiene proporción sin deformar */
       display: block;
     }
     header h1, header h3, header p {
@@ -59,17 +60,8 @@
       <li><a href="https://pablolarios-droid.github.io/mmmm/">A6 - Movimiento mouse</a></li>
       <li><a href="https://pablolarios-droid.github.io/ondas/">A7 - Onda sinoidal</a></li>
       <li><a href="https://pablolarios-droid.github.io/ondas2-reto/">A8 - Onda sinoidal reto</a></li>
+      <li><a href="https://pablolarios-droid.github.io/dibujo/">A9 - Dibujo</a></li>
     </ul>
   </main>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
