--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
       <li><a href="https://pablolarios-droid.github.io/ondas/">A7 - Onda sinoidal</a></li>
       <li><a href="https://pablolarios-droid.github.io/ondas2-reto/">A8 - Onda sinoidal reto</a></li>
       <li><a href="https://pablolarios-droid.github.io/dibujo/">A9 - Dibujo</a></li>
+      <li><a href="https://pablolarios-droid.github.io/paint/">A10 - Paint</a></li>
     </ul>
   </main>
 </body>
 </html>
+
