--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
       <li><a href="https://pablolarios-droid.github.io/dibujo/">A9 - Dibujo</a></li>
       <li><a href="https://pablolarios-droid.github.io/paint/">A10 - Paint</a></li>
       <li><a href="https://pablolarios-droid.github.io/reloj-/">A11 - Reloj</a></li>
+
+      <!-- 🔹 NUEVA ACTIVIDAD AGREGADA -->
+      <li><a href="https://pablolarios-droid.github.io/nave/">A12 - Nave</a></li>
     </ul>
   </main>
 </body>
 </html>
-
-
-
