--- a/index.html
+++ b/index.html
@@ -64,9 +64,13 @@
       <li><a href="https://pablolarios-droid.github.io/paint/">A10 - Paint</a></li>
       <li><a href="https://pablolarios-droid.github.io/reloj-/">A11 - Reloj</a></li>
 
-      <!-- 🔹 NUEVA ACTIVIDAD AGREGADA -->
       <li><a href="https://pablolarios-droid.github.io/nave/">A12 - Nave</a></li>
+
+      <!
+      <li><a href="https://pablolarios-droid.github.io/smoker/">A13 - Modelo 3D</a></li>
     </ul>
   </main>
 </body>
 </html>
+
+
