--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     }
     header img {
       width: 100%;
-      height: 200px; /* 🔹 altura reducida del banner */
-      object-fit: cover; /* mantiene proporción sin deformar */
+      height: 200px;
+      object-fit: cover;
       display: block;
     }
     header h1, header h3, header p {
@@ -36,6 +36,7 @@
       color: #0066cc;
       font-weight: bold;
       transition: 0.3s;
+      font-family: Arial, sans-serif; /* asegura misma fuente */
     }
     ul li a:hover {
       color: #003366;
@@ -63,14 +64,14 @@
       <li><a href="https://pablolarios-droid.github.io/dibujo/">A9 - Dibujo</a></li>
       <li><a href="https://pablolarios-droid.github.io/paint/">A10 - Paint</a></li>
       <li><a href="https://pablolarios-droid.github.io/reloj-/">A11 - Reloj</a></li>
-
       <li><a href="https://pablolarios-droid.github.io/nave/">A12 - Nave</a></li>
-
-      <!
       <li><a href="https://pablolarios-droid.github.io/smoker/">A13 - Modelo 3D</a></li>
     </ul>
   </main>
 </body>
 </html>
+
+</html>
+
 
 
